# app-role-assignment-cli

./: README.md  docker-compose.yml  local.env  pyproject.toml
app_role_assignment_cli/: constants.py  env.py  exceptions.py  helpers.py  logging_settings.py  main.py
app_role_assignment_cli/handlers/: azure.py  helpers.py
app_role_assignment_cli/interfaces/aws/: secrets_manager.py
app_role_assignment_cli/interfaces/azure/: msgraph_api.py
tests/data/: 20260204115153_TEST-1_assign_odd_user_to_software_devs.yml  20260204115153_TEST-1_remove_odd_user_to_software_devs.yml
